# test-lfs-repo

./: .gitattributes  pyproject.toml
src/test_lfs_repo/: __init__.py  another_lfs_module.py
