[project]
name = "test-lfs-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zanie Blue", email = "contact@zanie.dev" },
    { name = "samypr100", email = "3933065+samypr100@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
test-lfs-repo = "test_lfs_repo:main"
test-lfs-repo-assets = "test_lfs_repo:main_lfs"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
